--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -15,6 +15,7 @@ body {
 }
 
 .container {
+  width: 100vw;
   padding: 5% 15%;
   font-family: 'Poppins', sans-serif;
 }
@@ -30,10 +31,14 @@ body {
   font-family: 'PT Serif', serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 36px;
+  font-size: clamp(1.5rem, 2.5vw, 4rem); 
   line-height: 48px;
   letter-spacing: -0.045em;
   color: var(--primary-color);
+}
+
+.intro {
+  width: 390px;
 }
 
 .intro h2 {
@@ -47,8 +52,6 @@ body {
 }
 
 .intro p {
-  width: 390px;
-  max-width: 100%;
   height: 87px;
   font-style: normal;
   font-weight: 400;
@@ -87,15 +90,17 @@ body {
   height: 471px;
 }
 
-.team-down {
+.profile-section div:nth-child(2) {
+  padding-top: 88px;
+}
+
+.profile-section div:nth-child(5) {
   padding-top: 88px;
 }
 
 .team img {
   width: 238px;
   height: 347px;
-  /* width: 100%;
-  height: auto; */
 }
 
 .name {
@@ -119,4 +124,29 @@ body {
   font-weight: 500;
   font-size: 14px;
   line-height: 17px;
+}
+
+@media only screen and (max-width: 768px) {
+  .container {
+    padding: 22px;
+  }
+  .top-section {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+
+  .intro h2 {
+    padding: 0;
+  }
+
+  .profile-section {
+    grid-template-columns: repeat(2, auto);
+    gap: 0;
+  }
+
+  .profile-section div:nth-child(even) {
+    padding-top: 88px;
+  }
+
 }
