Add pictures hover effect

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -90,6 +90,12 @@ body {
   height: 471px;
 }
 
+.team:hover {
+  animation: pulse;
+  animation-duration: 2s;
+  cursor: grab;
+}
+
 .profile-section div:nth-child(2) {
   padding-top: 88px;
 }
@@ -117,6 +123,7 @@ body {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
+  text-align: center;
 }
 
 .footer p {
@@ -148,5 +155,4 @@ body {
   .profile-section div:nth-child(even) {
     padding-top: 88px;
   }
-
 }
